--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/batuhantrkgl/massgrave-hosted/refs/heads/main/active.txt" />
+  <meta http-equiv="refresh" content="0; url=https://github.com/batuhantrkgl/massgrave-hosted/releases/download/23-10-2024/activate.ps1" />
 </head>
 <body>
 </body>
